# cfd-rt

./: Cargo.toml  rustfmt.toml
.github/workflows/: ci.yml
src/: advect.rs  bc.rs  body.rs  calc.rs  lib.rs  project.rs  system.rs
src/gpu/: advect.rs  common.rs  copy.rs  mod.rs  prelude.rs  shared.rs
src/gpu/shaders/: advect.wgsl
src/gpu/shaders/tests/: common.wgsl  double.wgsl
