[package]
name = "cfd-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray={ version = "0.16", features = ["serde", "approx"] }
serde="1.0.213"
serde_json = "1.0.132"
num = "0.4.3"
ndarray-interp = "0.4.1"
log = "0.4.22"
indexmap = "2.6.0"
parking_lot = "0.12.3"
thiserror = "2.0.3"
anyhow = "1.0.93"
downcast-rs = "1.0.93"
approx = "0.5.1"

# Dependencies for WebGPU support.
pollster = { version = "0.4.0", features = ["macro"], optional = true }
flume = { version = "0.11.1", features = ["async"], optional = true}
wgpu = { version = "23.0.1", optional = true }
bytemuck = { version = "1.21.0", optional = true }

[dev-dependencies]
test-log = "0.2.16"

[features]
f64 = []
wgpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster", "dep:flume"]

[profile.opt-dev]
inherits = "dev"
opt-level = 2
